--- a/chicken-meat-halal-in-pokrov.html
+++ b/chicken-meat-halal-in-pokrov.html
@@ -20,7 +20,7 @@
     <meta property="og:locale" content="ru_RU" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="►Мясо-Халяль" />
-    <meta property="og:url" content="https://halal-market.netlify.app/" />
+    <meta property="og:url" content="https://halal-market.netlify.app/chicken-meat-halal-in-pokrov.html" />
     <meta property="og:image" content="https://halal-market.netlify.app/images/apple-touch-icon1.png" />
     <meta property="og:image:secure_url" content="https://halal-market.netlify.app/images/halal_logo-small.svg" />
     <!--end of ogp -->
