some additions and important changes

--- a/front-leg-of-lamb-halal-meat-in-pokrov.html
+++ b/front-leg-of-lamb-halal-meat-in-pokrov.html
@@ -73,7 +73,7 @@
 
   <body class="flashIn">
     <!-- header -->
-    <header id="home" class="front-leg-of-lamb-halal-meat">
+    <header id="home" class="overlay_dark front-leg-of-lamb-halal-meat">
       <!-- navbar -->
       <nav id="nav" class="marginB">
         <div class="nav-center">
@@ -113,8 +113,8 @@
       <!-- banner -->
       <div class="banner">
         <div class="container">
-          <h1>Мясо-Халяль</h1>
-          <p>
+           <h1 class="h1">Мясо-Халяль</h1>
+          <p class="text_dark">
             Баранина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша баранина
             гуманно и мастерски разделывается, и с ней очень легко работать на кухне.
@@ -124,18 +124,13 @@
       </div>
     </header>
     <!-- enad of header -->
-    <!-- preloader -->
-    <!-- <div class="preloader">
-      <img src="images/preloader.gif" alt="preloader">
-    </div> -->
-    <!-- preloader -->
-    <!-- main -->
+  
     <!-- main -->
     <main id="beef-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
           <div class=" h1_title">
-            <h1 class="h1">Баранина для здоровья</h1>
+             <h2 class="h2">Баранина для здоровья</h2>
           </div>
           <div class="flexContainer">
             <div class="colHolder one">
