--- a/kurdyuk-lamb-meat-in-pokrov.html
+++ b/kurdyuk-lamb-meat-in-pokrov.html
@@ -72,7 +72,7 @@
 
   <body class="flashIn">
     <!-- header -->
-    <header id="home" class="kurdyuk_lamb_meat">
+    <header id="home" class="overlay_dark kurdyuk_lamb_meat">
       <!-- navbar -->
       <nav id="nav" class="marginB">
         <div class="nav-center">
@@ -112,8 +112,8 @@
       <!-- banner -->
       <div class="banner">
         <div class="container">
-          <h1>Мясо-Халяль</h1>
-          <p>
+               <h1 class="h1">Мясо-Халяль</h1>
+          <p class="text_dark">
             Баранина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша баранина
             гуманно и мастерски разделывается, и с ней очень легко работать на кухне.
@@ -122,19 +122,13 @@
         </div>
       </div>
     </header>
-    <!-- enad of header -->
-    <!-- preloader -->
-    <!-- <div class="preloader">
-      <img src="images/preloader.gif" alt="preloader">
-    </div> -->
-    <!-- preloader -->
-    <!-- main -->
+    <!-- ena of header -->
     <!-- main -->
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
           <div class=" h1_title">
-            <h1 class="h1">Баранина для здоровья</h1>
+            <h2 class="h2">Баранина для здоровья</h2>
           </div>
           <div class="flexContainer">
             <div class="colHolder one">
@@ -287,7 +281,6 @@
               class="fab fa-telegram-plane"></i>мы в телеграмме</a>
         </address>
         <div class="link_tabs">
-          <!-- <p><a href="faq.html">Вопрос-Ответ</a></p> -->
           <p>
             <a href="https://drive.google.com/file/d/1HOq3Cdd4JK7Z50PT9Av-_1f7s1McuaDw/view?usp=sharing"
               download="download" target="_blank">Скачать прайс-лист</a>
