--- a/rabbit-fresh-meat-halal.html
+++ b/rabbit-fresh-meat-halal.html
@@ -72,7 +72,7 @@
 
   <body class="flashIn">
     <!-- header -->
-    <header id="home" class="rabbit_halal_meat">
+    <header id="home" class="overlay_dark rabbit_halal_meat">
       <!-- navbar -->
       <nav id="nav" class="marginB">
         <div class="nav-center">
@@ -112,8 +112,8 @@
       <!-- banner -->
       <div class="banner">
         <div class="container">
-          <h1>Мясо-Халяль</h1>
-          <p>
+          <h1 class="h1">Мясо-Халяль</h1>
+          <p class="text_dark">
             Кролик травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наш кролик
             гуманно и мастерски разделывается, и с ней очень легко работать на кухне.
@@ -126,7 +126,7 @@
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
           <div class=" h1_title">
-            <h1 class="h1">Кролик для здоровья</h1>
+               <h2 class="h2">Кролик для здоровья</h2>
           </div>
           <div class="flexContainer">
             <div class="colHolder one">
