--- a/minced_meat_lamb_with_beef_meat_halal_in_pokrov.html
+++ b/minced_meat_lamb_with_beef_meat_halal_in_pokrov.html
@@ -73,7 +73,7 @@
 
   <body class="flashIn">
     <!-- header -->
-    <header id="home" class="minced_lamb_with_beef_meat">
+    <header id="home" class="overlay_dark minced_lamb_with_beef_meat">
       <!-- navbar -->
       <nav id="nav" class="marginB">
         <div class="nav-center">
@@ -113,8 +113,8 @@
       <!-- banner -->
       <div class="banner">
         <div class="container">
-          <h1>Мясо-Халяль</h1>
-          <p>
+          <h1 class="h1">Мясо-Халяль</h1>
+          <p class="text_dark">
             Говядина и баранина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый,
             мягкий вкус.
             Наша говядина
@@ -125,18 +125,13 @@
       </div>
     </header>
     <!-- enad of header -->
-    <!-- preloader -->
-    <!-- <div class="preloader">
-      <img src="images/preloader.gif" alt="preloader">
-    </div> -->
-    <!-- preloader -->
-    <!-- main -->
+
     <!-- main -->
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
           <div class=" h1_title">
-            <h1 class="h1">Мясо-Халяль для здоровья</h1>
+         <h2 class="h2">Мясо-Халяль для здоровья</h2>
           </div>
           <div class="flexContainer">
             <div class="colHolder one">
