--- a/veal-pulp-meat-to-buy-in-pokrov.html
+++ b/veal-pulp-meat-to-buy-in-pokrov.html
@@ -72,7 +72,7 @@
 
   <body class="flashIn">
     <!-- header -->
-    <header id="home" class="veal_pulp_meat">
+    <header id="home" class="overlay_dark veal_pulp_meat">
       <!-- navbar -->
       <nav id="nav" class="marginB">
         <div class="nav-center">
@@ -112,8 +112,8 @@
       <!-- banner -->
       <div class="banner">
         <div class="container">
-          <h1>Мясо-Халяль</h1>
-          <p>
+          <h1 class="h1">Мясо-Халяль</h1>
+          <p class="text_dark">
             Телятина травяного откорма, на 100% выращенной на местных фермах, высоко ценится за особый, мягкий вкус.
             Наша телятина
             гуманно и мастерски разделывается, и с ней очень легко работать на кухне.
@@ -123,18 +123,13 @@
       </div>
     </header>
     <!-- enad of header -->
-    <!-- preloader -->
-    <!-- <div class="preloader">
-      <img src="images/preloader.gif" alt="preloader">
-    </div> -->
-    <!-- preloader -->
-    <!-- main -->
+
     <!-- main -->
     <main id="beef-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
           <div class=" h1_title">
-            <h1 class="h1">Телятина для здоровья</h1>
+            <h2 class="h2">Телятина для здоровья</h2>
           </div>
           <div class="flexContainer">
             <div class="colHolder one">
