--- a/address_of_halal_meat_in_pokrov.html
+++ b/address_of_halal_meat_in_pokrov.html
@@ -139,12 +139,11 @@
       </section>
     </header>
     <!-- enad of header -->
+        <!-- preloader -->
+    <div class="preloader">
+      <img src="images/preloader.gif" alt="preloader" />
+    </div>
     <!-- preloader -->
-    <!-- <div class="preloader">
-      <img src="images/preloader.gif" alt="preloader">
-    </div> -->
-    <!-- preloader -->
-    <!-- main -->
     <!-- main -->
     <main class="main_bg_map">
       <div class=" col_left" id="feedback">
