--- a/rabbit-fresh-meat-halal.html
+++ b/rabbit-fresh-meat-halal.html
@@ -122,6 +122,11 @@
         </div>
       </div>
     </header>
+           <!-- preloader -->
+    <div class="preloader">
+      <img src="images/preloader.gif" alt="preloader" />
+    </div>
+    <!-- preloader -->
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
         <section class="container_gallery">
