--- a/beef-liver-meat-in-pokrov.html
+++ b/beef-liver-meat-in-pokrov.html
@@ -123,7 +123,11 @@
       </div>
     </header>
     <!-- enad of header -->
- 
+        <!-- preloader -->
+    <div class="preloader">
+      <img src="images/preloader.gif" alt="preloader" />
+    </div>
+    <!-- preloader -->
     <!-- main -->
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
