--- a/kurdyuk-lamb-meat-in-pokrov.html
+++ b/kurdyuk-lamb-meat-in-pokrov.html
@@ -123,6 +123,11 @@
       </div>
     </header>
     <!-- ena of header -->
+           <!-- preloader -->
+    <div class="preloader">
+      <img src="images/preloader.gif" alt="preloader" />
+    </div>
+    <!-- preloader -->
     <!-- main -->
     <main id="lamb-section">
       <div class="bg_custom_gallery1 ">
